--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -218,6 +218,8 @@ btp-en:
     children:
       - title:  Prof. Dhwanil Shukla
         url:        /project_reviews/btp/aerodynamics/dhwanil.html
+      - title:  Prof. Prabhu Ramachandran
+        url:        /project_reviews/btp/aerodynamics/prabhu.html    
 
   - title:      Structures
     children:
