--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -218,6 +218,9 @@ btp-en:
         url:        /project_reviews/btp/aerodynamics/dhwanil.html
       - title:  Prof. Prabhu Ramachandran
         url:        /project_reviews/btp/aerodynamics/prabhu.html    
+      - title:  Prof. Prabhu Ramachandran
+        url:        /project_reviews/btp/aerodynamics/prabhu1.html    
+
 
   - title:      Structures
     children:
