--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -152,7 +152,7 @@ slp-en:
 
   - title:      Structures
     children:
-      - title:  Prof. Krishnendhu Haldar
+      - title:  Prof. Krishnendu Haldar
         url:        /project_reviews/slp/structures/haldar.html
       - title:  Prof. PJ Guruprasad
         url:        /project_reviews/slp/structures/guruprasad.html
