--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ text_skin: orange # "default" (default), "dark", "forest", "ocean", "chocolate",
 highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : Aero-DAMP Blog
+title   : CDS-SRG, IIT Bombay
 description: > # this means to ignore newlines until "Language & timezone"
-  A website for the students from the Department of Aerospace Engineering, IIT Bombay
+  A homepage of the Controls and Dynamical Systems Student Reading Group
 
 
 ## => Language and Timezone
@@ -35,11 +35,11 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : organization # "person" (default), "organization"
-  name      : Aerospace DAMP Team
+  name      : CDS-SRG Team
   url       :
   avatar    : # path or url of avatar image (square)
   bio       :
-  email     : dampc@aero.iitb.ac.in
+  email     : cds.srg.iitb@gmail.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: dampaeroiitb/dampaeroiitb.github.io
+repository: cds-srg-iitb/cds-srg-iitb.github.io
 repository_tree: master
 
 
